--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ a {
     height: 100vh;
     width: 100%;
     background-color: yellow;
-    color: green;
+    color: rgb(0, 128, 32);
     position: relative; 
 }
 h1 {
